--- a/styles/global.css
+++ b/styles/global.css
@@ -2,3 +2,19 @@
 .slick-prev:before {
   color: black;
 }
+
+/*
+  Lesson Page
+*/
+
+.lesson-content h1 {
+  @apply font-bold text-6xl mb-10;
+}
+
+.lesson-content h2 {
+  @apply font-bold text-5xl my-8;
+}
+
+.lesson-content h3 {
+  @apply font-bold text-4xl;
+}
