installed tailwind typography plugin

--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@
   Lesson Page
 */
 
-.lesson-content h1 {
+/* .lesson-content h1 {
   @apply font-bold text-6xl mb-10;
 }
 
@@ -17,4 +17,4 @@
 
 .lesson-content h3 {
   @apply font-bold text-4xl;
-}
+} */
