--- a/styles/global.css
+++ b/styles/global.css
@@ -7,3 +7,6 @@
   Lesson Content
 */
 
+.lesson-content h1 {
+  @apply mt-2 block text-3xl text-center leading-8 font-extrabold tracking-tight text-gray-900
+}
