--- a/styles/global.css
+++ b/styles/global.css
@@ -13,7 +13,7 @@
 #modal {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 99;
   left: 0;
   top: 0;
   width: 100%;
@@ -53,4 +53,8 @@
 .prose code::before,
 .prose code::after {
   content: "";
+}
+
+.lesson-content img {
+  cursor: pointer;
 }
