added custom styles to remove search input outline color

--- a/styles/global.css
+++ b/styles/global.css
@@ -58,3 +58,11 @@
 .lesson-content img {
   cursor: pointer;
 }
+
+/* 
+  Doc Search
+*/
+
+input[type='search']:focus {
+  --tw-ring-color: none;
+}
