updated css to remove open arrow from sidebar

--- a/styles/global.css
+++ b/styles/global.css
@@ -75,6 +75,10 @@ input[type='search']:focus {
   width: 100% !important;
 }
 
+.pro-sidebar .pro-arrow-wrapper {
+  display: none;
+}
+
 .pro-sidebar > .pro-sidebar-inner {
   background: #ffffff !important;
 }
