chore: add osano widget

--- a/styles/global.css
+++ b/styles/global.css
@@ -216,3 +216,8 @@ input[type="search"]:focus {
   stroke: #f1c40f;
   fill: #f1c40f;
 }
+
+/* hides the osano widget */
+.osano-cm-widget {
+  display: none;
+}
